ml/Adding clean gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 Predator-Prey/Library/PackageCache/
 Predator-Prey/Library/ShaderCache/
 Predator-Prey/Library/BuildInstructions/
-Predator-Prey/Assets/ML-Agents/
+#Predator-Prey/Assets/ML-Agents/
 Predator-Prey/results/
 Predator-Prey/Temp/
 Predator-Prey/Assets/Resources/
